# vestige

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-compose-smoke-test.yml  docker-publish.yml  tauri-release.yml
api/: Dockerfile  pom.xml
guides/: vestige_deploy_aws.md  vestige_deploy_azure.md  vestige_deploy_gcp.md
scraper/: Dockerfile  api_server.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_candidate_selection.py  test_crawler.py  test_db.py  test_extractor.py  test_scraper.py  test_validation.py
scraper/browser/: session.py
scraper/db/: models.py  writer.py
scraper/manual_tests/: test_candidate_selection.py  test_crawler.py  test_db.py  test_extractor.py  test_scraper.py  test_validation.py
scraper/models/: result.py
scraper/pipeline/: crawler.py  llm_extractor.py  orchestrator.py  scraper.py
scraper/security/: crypto.py
scraper/storage/: local_logger.py
scraper/tests/: conftest.py
scraper/tests/e2e/: test_path_b.py  test_path_c.py  test_path_d.py
scraper/tools/: discover_selectors.py
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/azure/: main.tf
terraform/gcp/: main.tf  outputs.tf  variables.tf
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/resources/: .env.template  docker-compose.yml
ui/src-tauri/src/: lib.rs
ui/src/api/: client.ts  (+5 more)
(+96 files in other folders)
